--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,1 +1,12 @@
+:root {
+  --background: #fff;
+  --foreground: #000;
+  --primary: #08f;
+  font-family: Helvetica, sans-serif;
+}
 
+body {
+  margin: 0;
+  background: var(--background);
+  color: var(--foreground);
+}
