web: new page textarea

--- a/web/src/app/new/new.component.html
+++ b/web/src/app/new/new.component.html
@@ -1,2 +1,7 @@
 <app-new-header />
-<p>new works!</p>
+
+<textarea
+  #textarea
+  placeholder="What's on your mind?"
+  (input)="resizeTextarea()"
+></textarea>
