--- a/web/src/app/navigation/navigation.component.scss
+++ b/web/src/app/navigation/navigation.component.scss
@@ -5,31 +5,39 @@
   bottom: 0;
   display: flex;
   justify-content: space-around;
-  align-items: center;
-  height: 64px;
+  height: 56px;
   background: var(--background);
   box-shadow: 0 0 24px #0004;
   a {
     background: #0000;
-    padding: 8px 16px;
+    padding: 0 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    grid-gap: 4px;
+    justify-content: center;
     text-decoration: none;
     color: var(--foreground);
     font-size: 12px;
     svg {
       fill: var(--foreground);
     }
-    &.new {
+    &.active {
+      font-weight: 900;
       color: var(--primary);
+      svg {
+        fill: var(--primary);
+      }
+    }
+    &.new {
       font-size: 16px;
+      font-weight: bold;
+      color: var(--primary);
       svg {
         fill: #fff;
         background: var(--primary);
         border-radius: 100%;
-        transform: scale(2) translateY(-8px);
+        padding: 4px;
+        transform: scale(2.5) translateY(-8px);
       }
     }
   }
