--- a/web/src/app/home/header/header.component.scss
+++ b/web/src/app/home/header/header.component.scss
@@ -12,13 +12,14 @@
       font-weight: 900;
       font-size: 18px;
     }
-    a {
+    button {
+      border: none;
+      background: none;
       flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
       color: inherit;
-      text-decoration: none;
       &.active {
         font-weight: bold;
         position: relative;
