--- a/web/src/app/navigation/navigation.component.html
+++ b/web/src/app/navigation/navigation.component.html
@@ -6,11 +6,11 @@
   </svg>
   <span>Home</span>
 </a>
-<a class="new" routerLink="/new" routerLinkActive="active">
+<a class="new" routerLink="/new">
   <svg height="20px" viewBox="0 -960 960 960" width="20px">
     <path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z" />
   </svg>
-  <span>New</span>
+  <span>Post</span>
 </a>
 <a routerLink="/me" routerLinkActive="active">
   <svg height="24px" viewBox="0 -960 960 960" width="24px">
