--- a/web/src/app/navigation/navigation.component.scss
+++ b/web/src/app/navigation/navigation.component.scss
@@ -1,16 +1,24 @@
 :host {
   position: fixed;
-  left: 0;
-  right: 0;
   bottom: 0;
+  left: 50%;
+  width: 320px;
+  max-width: 100%;
+  transform: translateX(-50%);
   display: flex;
   justify-content: space-around;
   height: 56px;
   background: var(--background);
   box-shadow: 0 0 24px #0004;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  @media (max-width: 640px) {
+    border-radius: 0;
+    width: 100%;
+  }
   a {
     background: #0000;
-    padding: 0 16px;
+    width: 64px;
     display: flex;
     flex-direction: column;
     align-items: center;
