--- a/web/src/app/new/header/header.component.html
+++ b/web/src/app/new/header/header.component.html
@@ -1,8 +1,15 @@
-<button (click)="onBackClick()">
-  <svg height="24px" viewBox="0 -960 960 960" width="24px">
-    <path
-      d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"
-    />
-  </svg>
-</button>
-<button class="post" (click)="onPostClick()">Post</button>
+<div>
+  <button (click)="onBackClick()">
+    <svg height="24px" viewBox="0 -960 960 960" width="24px">
+      <path
+        d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"
+      />
+    </svg>
+  </button>
+  <div class="actions">
+    <button class="preview" [class.active]="preview" (click)="onPreviewClick()">
+      Preview
+    </button>
+    <button class="post" (click)="onPostClick()">Post</button>
+  </div>
+</div>
