--- a/web/src/app/new/header/header.component.scss
+++ b/web/src/app/new/header/header.component.scss
@@ -1,24 +1,58 @@
 :host {
   display: flex;
-  align-items: center;
-  padding: 0 8px;
-  height: 48px;
-  justify-content: space-between;
-  background: var(--background);
-  button {
-    padding: 0;
-    border: none;
-    background: #0000;
-    svg {
-      fill: var(--foreground);
+  justify-content: center;
+  > div {
+    width: 640px;
+    max-width: 100vw;
+    display: flex;
+    align-items: center;
+    padding: 0 8px;
+    height: 48px;
+    justify-content: space-between;
+    background: var(--background);
+    button {
+      padding: 0;
+      border: none;
+      background: #0000;
+      > svg {
+        fill: var(--foreground);
+      }
     }
-    &.post {
-      padding: 8px 16px;
-      background: var(--primary);
-      color: #fff;
-      font-size: 16px;
-      line-height: 1;
-      border-radius: 16px;
+    .actions {
+      display: flex;
+      grid-gap: 8px;
+      button {
+        padding: 8px 16px;
+        font-size: 16px;
+        line-height: 1;
+        border-radius: 16px;
+        overflow: hidden;
+        &.preview {
+          position: relative;
+          color: var(--foreground);
+          &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: var(--foreground);
+            opacity: 0.2;
+          }
+          &.active {
+            color: var(--background);
+            background: var(--foreground);
+            &::before {
+              display: none;
+            }
+          }
+        }
+        &.post {
+          color: #fff;
+          background: var(--primary);
+        }
+      }
     }
   }
 }
