--- a/web/src/app/new/new.component.scss
+++ b/web/src/app/new/new.component.scss
@@ -1,8 +1,14 @@
 :host {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   textarea {
+    resize: none;
     border: none;
     font-family: inherit;
-    width: 100%;
+    width: 640px;
+    max-width: 100%;
+    margin: 0 auto;
     font-size: 18px;
     line-height: 1;
     padding: 12px;
