web: authorization modal

--- a/web/src/app/new/header/header.component.scss
+++ b/web/src/app/new/header/header.component.scss
@@ -11,6 +11,7 @@
     justify-content: space-between;
     background: var(--background);
     button {
+      font-weight: bold;
       padding: 0;
       border: none;
       background: #0000;
@@ -27,7 +28,10 @@
         line-height: 1;
         border-radius: 16px;
         overflow: hidden;
-        transition: 200ms;
+        transition:
+          background 200ms,
+          color 200ms,
+          filter 100ms;
         &.preview {
           position: relative;
           color: var(--foreground);
