--- a/web/src/app/authorization/register/register.component.html
+++ b/web/src/app/authorization/register/register.component.html
@@ -51,7 +51,7 @@
     [(ngModel)]="password2"
   />
 </div>
-<button class="main" (click)="unimplemented()">Sign up</button>
+<button class="main" (click)="register()">Sign up</button>
 <div class="divider"><span>Or sign up with</span></div>
 <div class="openid">
   <button (click)="unimplemented()">
