--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -5,6 +5,7 @@
   --background: #fff;
   --foreground: #000;
   --primary: #08f;
+  --error: #f22;
   font-family: "Open Sans", Helvetica, sans-serif;
 }
 
