--- a/web/src/app/authentication/login/login.component.html
+++ b/web/src/app/authentication/login/login.component.html
@@ -11,7 +11,7 @@
   />
 </svg>
 <h2 class="title">Sign in with username</h2>
-<p>Start posting, voting, and commenting in your favorite community.</p>
+<p>Start posting, hearting, and commenting in your favorite community.</p>
 <div class="error">{{ error }}</div>
 <div class="input">
   <svg width="20px" height="20px" viewBox="0 -960 960 960">
@@ -41,7 +41,7 @@
 </div>
 <div class="memory">
   <div>
-    <input type="checkbox" />
+    <input type="checkbox" [(ngModel)]="rememberMe" />
     <span>Remember me</span>
   </div>
   <button (click)="unimplemented()">Forgot password?</button>
