--- a/web/src/app/authentication/register/register.component.scss
+++ b/web/src/app/authentication/register/register.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles";
+@import "../../../components";
 
 :host {
   width: 400px;
@@ -47,6 +47,11 @@
   p {
     margin: 0 0 16px;
     text-align: center;
+  }
+  .error {
+    margin: 8px 0 0;
+    font-size: 14px;
+    color: var(--error);
   }
   .input {
     position: relative;
