--- a/web/src/app/me/header/header.component.scss
+++ b/web/src/app/me/header/header.component.scss
@@ -19,6 +19,26 @@
     flex-direction: column;
     align-items: start;
     box-shadow: 0 0 24px #0004;
+    position: relative;
+    overflow: hidden;
+    .heading {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      .actions {
+        display: flex;
+        grid-gap: 8px;
+        button {
+          border: none;
+          background: none;
+          padding: 0;
+          cursor: pointer;
+          svg {
+            fill: var(--foreground);
+          }
+        }
+      }
+    }
     .username {
       font-weight: bold;
     }
