--- a/web/src/app/me/header/header.component.scss
+++ b/web/src/app/me/header/header.component.scss
@@ -16,38 +16,29 @@
     width: 640px;
     max-width: calc(100% - 32px);
     display: flex;
-    flex-direction: column;
-    align-items: start;
     box-shadow: 0 0 24px #0004;
     position: relative;
     overflow: hidden;
-    .heading {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      .actions {
-        display: flex;
-        grid-gap: 8px;
-        button {
-          border: none;
-          background: none;
-          padding: 0;
-          cursor: pointer;
-          svg {
-            fill: var(--foreground);
-          }
-        }
+    .main {
+      flex: 1;
+      .username {
+        font-weight: bold;
+      }
+      .fullname {
+        font-weight: 900;
+        font-size: 24px;
+      }
+      .bio {
+        margin-top: 8px;
       }
     }
-    .username {
-      font-weight: bold;
-    }
-    .fullname {
-      font-weight: 900;
-      font-size: 24px;
-    }
-    .bio {
-      margin-top: 8px;
+    .actions {
+      display: flex;
+      flex-direction: column;
+      grid-gap: 8px;
+      svg {
+        fill: var(--foreground);
+      }
     }
   }
 }
