--- a/web/src/components.scss
+++ b/web/src/components.scss
@@ -71,6 +71,9 @@
 }
 
 .input-basic {
+  resize: none;
+  font-family: inherit;
+  font-size: 16px;
   border: 1px solid #8884;
   font-size: 16px;
   line-height: 1;
@@ -78,4 +81,7 @@
   border-radius: 8px;
   background: var(--background);
   color: var(--foreground);
+  &:disabled {
+    background: #8884;
+  }
 }
