web: renamed me settings route to edit

--- a/web/src/app/me/edit/edit.component.html
+++ b/web/src/app/me/edit/edit.component.html
@@ -1,4 +1,4 @@
-<app-settings-header (saveClickEvent)="save()" [saveLoading]="saveLoading" />
+<app-edit-header (saveClickEvent)="save()" [saveLoading]="saveLoading" />
 <main>
   <div>
     <label>Username</label>
