--- a/web/src/app/me/header/header.component.html
+++ b/web/src/app/me/header/header.component.html
@@ -1,18 +1,5 @@
-<div class="color"></div>
-<div class="profile">
-  <div class="main">
-    <div class="username">&#64;{{ username }}</div>
-    <div class="fullname">{{ fullname }}</div>
-    <div class="bio">{{ bio }}</div>
-  </div>
+<div class="color">
   <div class="actions">
-    <a routerLink="/me/settings">
-      <svg width="24px" height="24px" viewBox="0 -960 960 960">
-        <path
-          d="m370-80-16-128q-13-5-24.5-12T307-235l-119 50L78-375l103-78q-1-7-1-13.5v-27q0-6.5 1-13.5L78-585l110-190 119 50q11-8 23-15t24-12l16-128h220l16 128q13 5 24.5 12t22.5 15l119-50 110 190-103 78q1 7 1 13.5v27q0 6.5-2 13.5l103 78-110 190-118-50q-11 8-23 15t-24 12L590-80H370Zm70-80h79l14-106q31-8 57.5-23.5T639-327l99 41 39-68-86-65q5-14 7-29.5t2-31.5q0-16-2-31.5t-7-29.5l86-65-39-68-99 42q-22-23-48.5-38.5T533-694l-13-106h-79l-14 106q-31 8-57.5 23.5T321-633l-99-41-39 68 86 64q-5 15-7 30t-2 32q0 16 2 31t7 30l-86 65 39 68 99-42q22 23 48.5 38.5T427-266l13 106Zm42-180q58 0 99-41t41-99q0-58-41-99t-99-41q-59 0-99.5 41T342-480q0 58 40.5 99t99.5 41Zm-2-140Z"
-        />
-      </svg>
-    </a>
     <a routerLink="/me/logout">
       <svg width="24px" height="24px" viewBox="0 -960 960 960">
         <path
@@ -20,6 +7,19 @@
         />
       </svg>
     </a>
+  </div>
+</div>
+<div class="profile">
+  <div class="username">&#64;{{ username }}</div>
+  <div class="fullname">{{ fullname }}</div>
+  <div class="bio">{{ bio }}</div>
+  <div class="actions">
+    <a routerLink="/me/edit">
+      <svg width="24px" height="24px" viewBox="0 -960 960 960">
+        <path
+          d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h357l-80 80H200v560h560v-278l80-80v358q0 33-23.5 56.5T760-120H200Zm280-360ZM360-360v-170l367-367q12-12 27-18t30-6q16 0 30.5 6t26.5 18l56 57q11 12 17 26.5t6 29.5q0 15-5.5 29.5T897-728L530-360H360Zm481-424-56-56 56 56ZM440-440h56l232-232-28-28-29-28-231 231v57Zm260-260-29-28 29 28 28 28-28-28Z"
+        /></svg
+    ></a>
   </div>
   @if (loading) {
     <app-spinner [fill]="true" background="var(--background)" />
