--- a/web/src/app/me/header/header.component.scss
+++ b/web/src/app/me/header/header.component.scss
@@ -4,8 +4,17 @@
   align-items: center;
   .color {
     background: var(--primary);
-    height: 96px;
+    height: 120px;
     width: 100%;
+    .actions {
+      display: flex;
+      justify-content: flex-end;
+      grid-gap: 8px;
+      padding: 16px 28px;
+      svg {
+        fill: #fff;
+      }
+    }
   }
   .profile {
     min-height: 128px;
@@ -16,25 +25,25 @@
     width: 640px;
     max-width: calc(100% - 32px);
     display: flex;
+    flex-direction: column;
     box-shadow: 0 0 24px #0004;
     position: relative;
     overflow: hidden;
-    .main {
-      flex: 1;
-      .username {
-        font-weight: bold;
-      }
-      .fullname {
-        font-weight: 900;
-        font-size: 24px;
-      }
-      .bio {
-        margin-top: 8px;
-      }
+    .username {
+      font-weight: bold;
+    }
+    .fullname {
+      font-weight: 900;
+      font-size: 24px;
+    }
+    .bio {
+      margin-top: 8px;
     }
     .actions {
+      top: 16px;
+      right: 16px;
+      position: absolute;
       display: flex;
-      flex-direction: column;
       grid-gap: 8px;
       svg {
         fill: var(--foreground);
