--- a/web/src/app/new/new.component.scss
+++ b/web/src/app/new/new.component.scss
@@ -5,6 +5,7 @@
   main {
     width: 640px;
     max-width: 100%;
+    height: calc(100dvh - 48px);
     margin: 0 auto;
     overflow: auto;
     div {
