--- a/web/src/app/new/header/header.component.html
+++ b/web/src/app/new/header/header.component.html
@@ -18,6 +18,16 @@
         Preview
       }
     </button>
-    <button class="post" (click)="postClickEvent.emit()">Post</button>
+    <button class="post" (click)="postClickEvent.emit()">
+      Post
+      @if (loading) {
+        <app-spinner
+          [fill]="true"
+          [size]="16"
+          color="#fff"
+          background="var(--primary)"
+        />
+      }
+    </button>
   </div>
 </div>
