--- a/web/src/app/new/header/header.component.scss
+++ b/web/src/app/new/header/header.component.scss
@@ -33,6 +33,7 @@
         line-height: 1;
         border-radius: 16px;
         overflow: hidden;
+        position: relative;
         transition:
           background 200ms,
           color 200ms,
