web: me load more posts

--- a/web/src/app/new/new.component.html
+++ b/web/src/app/new/new.component.html
@@ -7,7 +7,7 @@
 
 <main>
   @if (preview) {
-    <div>{{ content }}</div>
+    <app-post-card [username]="username" [content]="content" />
   } @else {
     <textarea
       #textarea
