--- a/web/src/app/post/header/header.component.scss
+++ b/web/src/app/post/header/header.component.scss
@@ -9,6 +9,7 @@
     padding: 0 12px;
     height: 48px;
     justify-content: space-between;
+    background: var(--background);
     button {
       font-weight: bold;
       padding: 0;
