--- a/web/src/app/me/me.component.scss
+++ b/web/src/app/me/me.component.scss
@@ -1,13 +1,35 @@
 :host {
   display: block;
   padding-bottom: 96px;
+  > p {
+    text-align: center;
+  }
   .loading {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 32px;
+    margin: 24px;
   }
-  > p {
-    text-align: center;
+  .more {
+    display: flex;
+    justify-content: center;
+    margin: 24px 0;
+    button {
+      padding: 0 16px;
+      height: 32px;
+      font-size: 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      white-space: nowrap;
+      line-height: 1;
+      border-radius: 16px;
+      border: none;
+      color: #fff;
+      background: var(--primary);
+      &:hover {
+        filter: brightness(1.25);
+      }
+    }
   }
 }
