--- a/web/src/components.scss
+++ b/web/src/components.scss
@@ -24,11 +24,33 @@
   color: #fff;
   background: var(--primary);
   transition: filter 200ms;
+  position: relative;
+  overflow: hidden;
   &:not(:disabled) {
     cursor: pointer;
     &:hover {
       filter: brightness(1.25);
     }
+  }
+}
+
+.button-basic-sm {
+  padding: 0 16px;
+  height: 32px;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
+  line-height: 1;
+  border-radius: 16px;
+  border: none;
+  color: #fff;
+  background: var(--primary);
+  position: relative;
+  overflow: hidden;
+  &:hover {
+    filter: brightness(1.25);
   }
 }
 
