--- a/web/src/app/authentication/login/login.component.scss
+++ b/web/src/app/authentication/login/login.component.scss
@@ -1,5 +1,3 @@
-@import "../../../components";
-
 :host {
   width: 400px;
   max-width: calc(100% - 48px);
@@ -32,7 +30,9 @@
     z-index: 1;
   }
   .close {
-    @extend .button-icon;
+    position: absolute;
+    top: 16px;
+    right: 16px;
   }
   > svg {
     fill: var(--foreground);
@@ -65,7 +65,6 @@
     }
     width: 100%;
     input {
-      @extend .input-basic;
       width: 100%;
       padding: 8px 8px 8px 32px;
     }
@@ -81,12 +80,8 @@
       grid-gap: 8px;
       align-items: center;
     }
-    button {
-      @extend .button-text;
-    }
   }
   button.main {
-    @extend .button-basic;
     width: 100%;
   }
   .divider {
@@ -109,7 +104,6 @@
     grid-gap: 8px;
     width: 100%;
     button {
-      @extend .button-hover-highlight;
       flex: 1;
       padding: 8px;
       border: none;
@@ -122,9 +116,6 @@
   .sign-up {
     margin: 16px 0 0;
     font-size: 14px;
-    button {
-      @extend .button-text;
-    }
   }
 }
 .removed :host {
