--- a/web/src/app/authentication/register/register.component.scss
+++ b/web/src/app/authentication/register/register.component.scss
@@ -1,5 +1,3 @@
-@import "../../../components";
-
 :host {
   width: 400px;
   max-width: calc(100% - 48px);
@@ -32,7 +30,9 @@
     z-index: 1;
   }
   .close {
-    @extend .button-icon;
+    position: absolute;
+    top: 16px;
+    right: 16px;
   }
   > svg {
     fill: var(--foreground);
@@ -65,13 +65,11 @@
     }
     width: 100%;
     input {
-      @extend .input-basic;
       width: 100%;
       padding: 8px 8px 8px 32px;
     }
   }
   button.main {
-    @extend .button-basic;
     width: 100%;
     margin: 32px 0 0;
   }
@@ -95,7 +93,6 @@
     grid-gap: 8px;
     width: 100%;
     button {
-      @extend .button-hover-highlight;
       flex: 1;
       padding: 8px;
       border: none;
@@ -108,9 +105,6 @@
   .login {
     margin: 16px 0 0;
     font-size: 14px;
-    button {
-      @extend .button-text;
-    }
   }
 }
 .removed :host {
