--- a/web/src/app/new/header/header.component.html
+++ b/web/src/app/new/header/header.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button (click)="onBackClick()">
+  <button class="button-icon" (click)="onBackClick()">
     <svg height="24px" viewBox="0 -960 960 960" width="24px">
       <path
         d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"
@@ -8,7 +8,7 @@
   </button>
   <div class="actions">
     <button
-      class="preview"
+      class="button-basic-sm preview"
       [class.active]="preview()"
       (click)="previewClickEvent.emit()"
     >
@@ -18,7 +18,7 @@
         Preview
       }
     </button>
-    <button class="post" (click)="postClickEvent.emit()">
+    <button class="button-basic-sm post" (click)="postClickEvent.emit()">
       Post
       @if (loading) {
         <app-spinner
