--- a/web/src/app/me/posts/posts.component.html
+++ b/web/src/app/me/posts/posts.component.html
@@ -1,10 +1,6 @@
 @if (posts) {
   @for (post of posts; track post.id) {
-    <app-post-card
-      [username]="post.author.username"
-      [content]="post.content"
-      (click)="onPostClick(post)"
-    />
+    <app-post-card [post]="post" />
   } @empty {
     <p>No posts yet.</p>
   }
