--- a/web/src/app/navigation/navigation.component.scss
+++ b/web/src/app/navigation/navigation.component.scss
@@ -1,51 +1,49 @@
 :host {
   position: fixed;
   bottom: 0;
-  left: 50%;
-  width: 320px;
-  max-width: 100%;
-  transform: translateX(-50%);
+  left: 0;
+  right: 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   height: 56px;
   background: var(--background);
   box-shadow: 0 0 24px #0004;
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
-  @media (max-width: 640px) {
-    border-radius: 0;
-    width: 100%;
-  }
-  a {
-    background: #0000;
-    width: 64px;
+  div {
+    width: 320px;
+    max-width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    color: var(--foreground);
-    font-size: 12px;
-    svg {
-      fill: var(--foreground);
-    }
-    &.active {
-      font-weight: 900;
-      color: var(--primary);
+    justify-content: space-around;
+    a {
+      background: #0000;
+      width: 64px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      color: var(--foreground);
+      font-size: 12px;
       svg {
-        fill: var(--primary);
+        fill: var(--foreground);
       }
-    }
-    &.new {
-      font-size: 16px;
-      font-weight: bold;
-      color: var(--primary);
-      svg {
-        fill: #fff;
-        background: var(--primary);
-        border-radius: 100%;
-        padding: 4px;
-        transform: scale(2.5) translateY(-8px);
+      &.active {
+        font-weight: 900;
+        color: var(--primary);
+        svg {
+          fill: var(--primary);
+        }
+      }
+      &.new {
+        font-size: 16px;
+        font-weight: 900;
+        color: var(--primary);
+        svg {
+          fill: #fff;
+          background: var(--primary);
+          border-radius: 100%;
+          padding: 2px;
+          transform: scale(2.5) translateY(-8px);
+        }
       }
     }
   }
