--- a/web/src/app/home/header/header.component.scss
+++ b/web/src/app/home/header/header.component.scss
@@ -1,12 +1,17 @@
 :host {
+  position: sticky;
+  top: -48px;
   display: block;
   background: var(--primary);
   color: #fff;
-  box-shadow: 0 0 24px #0004;
+  box-shadow: 0 0 8px #0004;
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: top 100ms;
   div {
+    width: 640px;
+    max-width: 100%;
     display: flex;
     justify-content: center;
     &.title {
