web: post card line clamp

--- a/web/src/app/home/latest-posts/latest-posts.component.html
+++ b/web/src/app/home/latest-posts/latest-posts.component.html
@@ -1,6 +1,6 @@
 @if (posts) {
   @for (post of posts; track post.id) {
-    <app-post-card [post]="post" />
+    <app-post-card [post]="post" [maxLines]="3" />
   } @empty {
     <p>No posts yet.</p>
   }
