--- a/web/src/app/post/header/header.component.scss
+++ b/web/src/app/post/header/header.component.scss
@@ -1,14 +1,16 @@
 :host {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: center;
+  height: 48px;
+  background: var(--background);
   > div {
     width: 640px;
     max-width: 100vw;
     display: flex;
     align-items: center;
     padding: 0 12px;
-    height: 48px;
     justify-content: space-between;
-    background: var(--background);
   }
 }
