PostResponse: username instead of author object

--- a/web/src/app/post/header/header.component.html
+++ b/web/src/app/post/header/header.component.html
@@ -6,7 +6,7 @@
       />
     </svg>
   </button>
-  @if (username === post?.author?.username) {
+  @if (username === post?.username) {
     <button class="button-icon" (click)="onDeleteClick()">
       <svg width="24px" height="24px" viewBox="0 -960 960 960">
         <path
