--- a/web/src/app/post/post-comment/header/header.component.html
+++ b/web/src/app/post/post-comment/header/header.component.html
@@ -18,7 +18,11 @@
         Preview
       }
     </button>
-    <button class="button-basic-sm comment" (click)="commentClickEvent.emit()">
+    <button
+      class="button-basic-sm comment"
+      (click)="commentClickEvent.emit()"
+      [disabled]="loading"
+    >
       Comment
       @if (loading) {
         <app-spinner
