--- a/web/src/app/post/post.component.html
+++ b/web/src/app/post/post.component.html
@@ -4,9 +4,23 @@
   <app-post-card [post]="post" />
 }
 
+@if (comments) {
+  @for (comment of comments; track comment.id) {
+    <app-comment-card [comment]="comment" />
+  } @empty {
+    <p>No comments yet.</p>
+  }
+}
+
 @if (loading) {
   <div class="loading">
     <app-spinner />
+  </div>
+} @else if (after) {
+  <div class="more">
+    <button class="button-basic-sm" (click)="loadMoreComments()">
+      Load more
+    </button>
   </div>
 }
 
