--- a/web/src/app/comment/comment-card/comment-card.component.scss
+++ b/web/src/app/comment/comment-card/comment-card.component.scss
@@ -7,6 +7,7 @@
   max-width: calc(100% - 32px);
   box-shadow: 0 0 8px #0004;
   margin: 12px auto;
+  position: relative;
   .username {
     font-weight: bold;
     font-size: 14px;
@@ -30,5 +31,10 @@
       grid-gap: 4px;
       align-items: center;
     }
+  }
+  .delete {
+    position: absolute;
+    top: 16px;
+    right: 16px;
   }
 }
