api: EmailValidator, UsernameSanitizer and post with comments delete fix

--- a/web/src/app/post/post-comment/post-comment.component.html
+++ b/web/src/app/post/post-comment/post-comment.component.html
@@ -15,6 +15,7 @@
   } @else {
     <textarea
       #textarea
+      spellcheck="false"
       placeholder="Write a comment..."
       [(ngModel)]="content"
       (input)="resizeTextarea()"
