--- a/web/src/app/authentication/register/register.component.html
+++ b/web/src/app/authentication/register/register.component.html
@@ -59,7 +59,7 @@
 </div>
 <button class="button-basic main" (click)="register()">
   @if (loading) {
-    <app-spinner color="#fff" [size]="16" />
+    <app-spinner color="var(--primary-foreground)" [size]="16" />
   } @else {
     Sign up
   }
