--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -2,6 +2,7 @@
   --background: #fff;
   --foreground: #000;
   --primary: #08f;
+  --primary-foreground: #fff;
   --error: #f22;
   font-family: "Open Sans", Helvetica, sans-serif;
 }
