--- a/web/src/app/home/header/header.component.scss
+++ b/web/src/app/home/header/header.component.scss
@@ -4,7 +4,7 @@
   top: -48px;
   display: block;
   background: var(--primary);
-  color: #fff;
+  color: var(--primary-foreground);
   box-shadow: 0 0 8px #0004;
   display: flex;
   flex-direction: column;
@@ -17,5 +17,8 @@
     justify-content: center;
     align-items: center;
     height: 48px;
+    svg {
+      fill: var(--primary-foreground);
+    }
   }
 }
