--- a/web/src/app/me/edit/header/header.component.html
+++ b/web/src/app/me/edit/header/header.component.html
@@ -17,7 +17,7 @@
         <app-spinner
           [fill]="true"
           [size]="16"
-          color="#fff"
+          color="var(--primary-foreground)"
           background="var(--primary)"
         />
       }
