--- a/web/src/app/me/header/header.component.scss
+++ b/web/src/app/me/header/header.component.scss
@@ -15,7 +15,7 @@
       padding: 16px 28px;
       width: 640px;
       svg {
-        fill: #fff;
+        fill: var(--primary-foreground);
       }
     }
   }
