--- a/web/src/app/post/post-comment/header/header.component.html
+++ b/web/src/app/post/post-comment/header/header.component.html
@@ -28,7 +28,7 @@
         <app-spinner
           [fill]="true"
           [size]="16"
-          color="#fff"
+          color="var(--primary-foreground)"
           background="var(--primary)"
         />
       }
