--- a/web/src/checkbox.scss
+++ b/web/src/checkbox.scss
@@ -23,7 +23,7 @@ input[type="checkbox"] {
   &::after {
     pointer-events: none;
     content: "+";
-    color: #fff;
+    color: var(--primary-foreground);
     font-family: monospace;
     font-size: 24px;
     position: absolute;
