--- a/web/src/components.scss
+++ b/web/src/components.scss
@@ -21,7 +21,7 @@
   line-height: 1;
   border: none;
   border-radius: 24px;
-  color: #fff;
+  color: var(--primary-foreground);
   background: var(--primary);
   transition: filter 200ms;
   position: relative;
@@ -45,7 +45,7 @@
   line-height: 1;
   border-radius: 16px;
   border: none;
-  color: #fff;
+  color: var(--primary-foreground);
   background: var(--primary);
   position: relative;
   overflow: hidden;
