web: me header email

--- a/web/src/app/me/header/header.component.scss
+++ b/web/src/app/me/header/header.component.scss
@@ -37,6 +37,9 @@
       font-weight: 900;
       font-size: 24px;
     }
+    .email {
+      font-size: 14px;
+    }
     .bio {
       margin-top: 8px;
     }
