--- a/web/src/app/me/header/header.component.html
+++ b/web/src/app/me/header/header.component.html
@@ -11,7 +11,8 @@
 </div>
 <div class="profile">
   <div class="username">&#64;{{ username }}</div>
-  <div class="fullname">{{ fullname }}</div>
+  <div class="fullname">{{ fullName }}</div>
+  <div class="email">{{ email }}</div>
   <div class="bio">{{ bio }}</div>
   <div class="actions">
     <a routerLink="/me/edit">
