--- a/web/src/app/comment/comment-card/comment-card.component.scss
+++ b/web/src/app/comment/comment-card/comment-card.component.scss
@@ -11,6 +11,10 @@
   .username {
     font-weight: bold;
     font-size: 14px;
+    color: inherit;
+    text-decoration: none;
+    padding: 8px;
+    margin: -8px;
   }
   .content {
     margin: 4px 0 8px;
