--- a/web/src/app/comment/comment-card/comment-card.component.scss
+++ b/web/src/app/comment/comment-card/comment-card.component.scss
@@ -8,13 +8,21 @@
   box-shadow: 0 0 8px #0004;
   margin: 12px auto;
   position: relative;
-  .username {
-    font-weight: bold;
-    font-size: 14px;
-    color: inherit;
-    text-decoration: none;
-    padding: 8px;
-    margin: -8px;
+  .header {
+    display: flex;
+    grid-gap: 1ch;
+    align-items: baseline;
+    .username {
+      font-weight: bold;
+      font-size: 14px;
+      color: inherit;
+      text-decoration: none;
+      padding: 8px;
+      margin: -8px;
+    }
+    .created {
+      font-size: 12px;
+    }
   }
   .content {
     margin: 4px 0 8px;
