--- a/web/src/app/post/post-card/post-card.component.scss
+++ b/web/src/app/post/post-card/post-card.component.scss
@@ -7,13 +7,21 @@
   max-width: calc(100% - 32px);
   box-shadow: 0 0 8px #0004;
   margin: 12px auto;
-  .username {
-    font-weight: bold;
-    font-size: 14px;
-    color: inherit;
-    text-decoration: none;
-    padding: 8px;
-    margin: -8px;
+  .header {
+    display: flex;
+    grid-gap: 1ch;
+    align-items: baseline;
+    .username {
+      font-weight: bold;
+      font-size: 14px;
+      color: inherit;
+      text-decoration: none;
+      padding: 8px;
+      margin: -8px;
+    }
+    .created {
+      font-size: 12px;
+    }
   }
   .content {
     margin: 4px 0 8px;
