--- a/web/src/app/me/header/header.component.scss
+++ b/web/src/app/me/header/header.component.scss
@@ -11,8 +11,8 @@
     .actions {
       display: flex;
       justify-content: flex-end;
-      grid-gap: 8px;
-      padding: 16px 28px;
+      grid-gap: 12px;
+      padding: 16px;
       width: 640px;
       max-width: 100%;
       svg {
