--- a/web/src/app/me/edit/header/header.component.html
+++ b/web/src/app/me/edit/header/header.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button (click)="onBackClick()">
+  <button class="button-icon" (click)="onBackClick()">
     <svg height="24px" viewBox="0 -960 960 960" width="24px">
       <path
         d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"
@@ -8,7 +8,7 @@
   </button>
   <div class="actions">
     <button
-      class="save"
+      class="button-basic-sm"
       (click)="saveClickEvent.emit()"
       [disabled]="saveLoading"
     >
