--- a/web/src/app/me/header/header.component.html
+++ b/web/src/app/me/header/header.component.html
@@ -15,12 +15,22 @@
   <div class="email">{{ email }}</div>
   <div class="bio">{{ bio }}</div>
   <div class="actions">
+    @if (email && !emailVerified) {
+      <a routerLink="/me/verify">
+        <svg width="20px" height="20px" viewBox="0 -960 960 960">
+          <path
+            d="m344-60-76-128-144-32 14-148-98-112 98-112-14-148 144-32 76-128 136 58 136-58 76 128 144 32-14 148 98 112-98 112 14 148-144 32-76 128-136-58-136 58Zm34-102 102-44 104 44 56-96 110-26-10-112 74-84-74-86 10-112-110-24-58-96-102 44-104-44-56 96-110 24 10 112-74 86 74 84-10 114 110 24 58 96Zm102-318Zm-42 142 226-226-56-58-170 170-86-84-56 56 142 142Z"
+          />
+        </svg>
+      </a>
+    }
     <a routerLink="/me/edit">
-      <svg width="24px" height="24px" viewBox="0 -960 960 960">
+      <svg width="20px" height="20px" viewBox="0 -960 960 960">
         <path
           d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h357l-80 80H200v560h560v-278l80-80v358q0 33-23.5 56.5T760-120H200Zm280-360ZM360-360v-170l367-367q12-12 27-18t30-6q16 0 30.5 6t26.5 18l56 57q11 12 17 26.5t6 29.5q0 15-5.5 29.5T897-728L530-360H360Zm481-424-56-56 56 56ZM440-440h56l232-232-28-28-29-28-231 231v57Zm260-260-29-28 29 28 28 28-28-28Z"
-        /></svg
-    ></a>
+        />
+      </svg>
+    </a>
   </div>
   @if (loading) {
     <app-spinner [fill]="true" background="var(--background)" />
